Updated Font theme

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </button>
         <nav class="hidden md:flex items-center justify-center bg-blue-300 rounded-full z-[100]">
           <ul id="menu"
-            class="flex  justify-center items-center text-center px-10 gap-x-8 text-white text-xl urbanist-regular font-normal ">
+            class="flex  justify-center items-center text-center px-10 gap-x-8 text-white text-xl urbanist-regular font-semibold ">
             <li>
               <a href="features.html">Features</a>
             </li>
@@ -133,7 +133,7 @@
           <img src="./public/yellow 3.svg" alt="" class="size-auto absolute top-48 right-56">
         </div>
         <div class="flex flex-col w-full text-white z-[200]"id="topic">
-          <h1 class="text-[30px] urbanist-regular font-normal w-full" id="topic">Hygienic, Safe, Natural,
+          <h1 class="text-[30px] urbanist-regular font-black w-full" id="topic">Hygienic, Safe, Natural,
             Environmentally
             Friendly Wipes</h1>
           <p class="text-xl font-normal py-5">A creative solution to clean and freshen hands</p>
@@ -142,7 +142,7 @@
             <!-- Video Section desktop View -->
       <div class="hidden md:flex w-full h-full px-40 absolute overflow-hidden">
         <div class="flex flex-col w-full text-white absolute bottom-0" id="topic1">
-          <h1 class="text-[48px] urbanist-regular font-normal w-full" id="topic1">Hygienic, Safe, Natural,<br>
+          <h1 class="text-[48px] urbanist-regular font-black w-full" id="topic1">Hygienic, Safe, Natural,<br>
             Environmentally
             Friendly Wipes</h1>
           <p class="text-xl font-normal py-5">A creative solution for clean and fresh hands</p>
@@ -168,16 +168,16 @@
   <section class="w-full flex flex-col overflow-hidden">
     <div class="w-full flex flex-col md:flex-row md:px-40 md:py-16 px-4 py-6 gap-x-6 opacity-0" id="document-title">
       <div class="w-full">
-        <h1 class="text-4xl text-nowrap urbanist-regular font-medium gradient-text">
+        <h2 class="text-4xl text-nowrap urbanist-regular font-semibold gradient-text">
           Stylish single-use <br> hand wipes
-        </h1>
+        </h2>
       </div>
       <div class="flex flex-col w-full">
-        <p class="urbanist-regular text-xl">
+        <p class="league-spartan text-xl">
           The compressed, high-quality cloth hand wipe inside an attractive and compact pod, cleans and refreshes your
           hands...
         </p>
-        <p class="urbanist-regular text-xl">
+        <p class="league-spartan text-xl">
           So easy and fun to use...
         </p>
       </div>
@@ -189,8 +189,8 @@
           class="flex gap-4 justify-center items-start p-6 shadow-2xl rounded-3xl font-['Baloo'] md:w-[500px] my-8">
           <img src="./public/water-drop.png" alt="">
           <div>
-            <h2 class="font-bold text-[28px] urbanist-regular text-[#3A50B3]">Natural</h2>
-            <p class="urbanist-regular text-[16px]">Wicked Wipes use only about 5 ml. of cleansing fluid per pod. Washing hands
+            <h2 class="font-bold text-[28px] urbanist-regular font-semibold text-[#3A50B3]">Natural</h2>
+            <p class="league-spartan text-[16px]">Wicked Wipes use only about 5 ml. of cleansing fluid per pod. Washing hands
               requires
               on average
               1.5 litres of water.</p>
@@ -200,8 +200,8 @@
           class="flex gap-4 justify-center items-start p-6 shadow-xl rounded-3xl font-['Baloo'] md:w-[500px] md:opacity-0 my-8">
           <img src="./public/leaf.png" alt="">
           <div>
-            <h2 class="font-bold text-[28px] urbanist-regular text-[#3A50B3]">Biodegradable</h2>
-            <p class="urbanist-regular text-[16px]">Well-made, soft, yet hardy cellulose hand wipes are designed to biodegrade
+            <h2 class="font-bold text-[28px] urbanist-regular font-semibold text-[#3A50B3]">Biodegradable</h2>
+            <p class="league-spartan text-[16px]">Well-made, soft, yet hardy cellulose hand wipes are designed to biodegrade
               naturally.</p>
           </div>
         </div>
@@ -209,8 +209,8 @@
           class="flex h-full gap-4 justify-center items-center p-6 shadow-xl rounded-3xl font-['Baloo'] md:w-[500px] md:opacity-0 my-8">
           <img src="./public/recycle.png" alt="">
           <div>
-            <h2 class="font-bold text-[28px] urbanist-regular text-[#3A50B3]">Recyclable</h2>
-            <p class="urbanist-regular text-[16px]">The pod is made from high quality PP / 05 raw material which is 100% recyclable.
+            <h2 class="font-bold text-[28px] urbanist-regular font-semibold text-[#3A50B3]">Recyclable</h2>
+            <p class="league-spartan text-[16px]">The pod is made from high quality PP / 05 raw material which is 100% recyclable.
             </p>
           </div>
         </div>
@@ -221,10 +221,10 @@
             type="video/mp4" autoplay muted loop></video>
         </div>
         <div class="flex flex-col justify-center items-center">
-          <button class="font-['Baloo'] px-10 text-white text-lg font-medium bg-[#3A50B3] rounded-full mt-6 py-2" onclick="window.location.href='features.html';">
+          <button class="urbanist-regular px-10 text-white text-lg font-semibold bg-[#3A50B3] rounded-full mt-6 py-2" onclick="window.location.href='features.html';">
             Learn more
           </button>
-          <p class="text-lg md:text-[28px] urbanist-regular text-[#7DB1E7] font-bold mt-2">About Wicked Wipes</p>
+          <p class="text-lg md:text-[28px] league-spartan text-[#7DB1E7] mt-2">About Wicked Wipes</p>
         </div>
       </div>
     </div>
@@ -233,12 +233,12 @@
       <video src="/public/bg-ad.mp4" class="w-full h-full object-cover" type="video/mov" autoplay muted loop playsinline></video>
     </div>
     <div class="flex w-full my-10 justify-center">
-      <h1
+      <h2
         id="hygiene-heading"
-        class="px-10 py-10 text-[#acd5ef] urbanist-regular text-6xl text-center hover:text-[#3A50B3] font-medium"
+        class="px-10 py-10 text-[#acd5ef] urbanist-regular text-6xl text-center hover:text-[#3A50B3] font-semibold"
       >
         Let’s make hygiene fun and desirable!
-      </h1>
+      </h2>
     </div>
   </section>
 
@@ -246,9 +246,9 @@
   <!-- Categories Section -->
 
   <section class=" flex flex-col md:pt-[100px] bg-[#c1eaf3] h-[903px] md:h-[903px] relative overflow-hidden" id="colorSection">
-    <h1 class="px-4 md:px-40 text-[#3a50b3] text-[28px] md:text-[46px] urbanist-regular font-normal">
+    <h2 class="px-4 md:px-40 text-[#3a50b3] text-[28px] md:text-[46px] urbanist-regular font-semibold">
       Refreshing natural fragrances
-    </h1>
+    </h2>
     <div class="flex flex-col">
       <div class="flex flex-wrap md:flex-nowrap md:gap-x-2 md:px-40">
         <div>
@@ -274,7 +274,7 @@
     <div class="flex md:flex-row flex-col justify-between">
       <div class="flex w-full">
         <h1 id="text-container"
-          class="absolute top-[430px] left-10 md:top-80 md:left-36 text-[60px] md:text-[180px] text-[#3a50b3] urbanist-regular font-normal fade-text duration-500">
+          class="absolute top-[430px] left-10 md:top-80 md:left-36 text-[60px] md:text-[180px] text-[#3a50b3] urbanist-regular font-semibold fade-text duration-500">
           Cool
         </h1>
       </div>
@@ -293,12 +293,12 @@
     <div
       class="flex flex-col justify-center items-center w-full gap-y-10">
       <div class="flex w-full md:px-10 px-4 justify-center">
-        <h1 class="text-[28px] md:text-[78px] urbanist-regular gradient-text font-medium">
+        <h3 class="text-[28px] md:text-[78px] urbanist-regular gradient-text font-semibold">
           Wicked Wipes is a smart <br> choice for your business
-        </h1>
+        </h3>
       </div>
       <div class="flex w-full md:px-28 px-4 justify-center">
-        <p class="md:text-2xl text-xl urbanist-regular font-normal text-center">
+        <p class="md:text-2xl text-xl league-spartan text-center">
           Elevate your customer experience at your dining establishment
           Hand hygiene is the primary means of reducing the spread of viruses and bacteria. Your customers will appreciate your commitment to their health and safety!
         </p>
@@ -348,8 +348,8 @@
         class="md:gap-x-40 flex md:flex-row flex-col justify-between items-center opacity-0 transition-opacity duration-300"
         id="document-heading1">
         <div class="flex flex-col md:gap-4 gap-4">
-          <h1 class="text-4xl md:text-[72px] text-gradient md:leading-none urbanist-regular font-normal">Make it yours </h1>
-          <p class="text-[20px] urbanist-regular font-normal text-[#3A50B3] word-wrap">Wicked
+          <h2 class="text-4xl md:text-[72px] text-gradient md:leading-none urbanist-regular font-semibold">Make it yours</h2>
+          <p class="text-[20px] league-spartan text-[#3A50B3] word-wrap">Wicked
             Wipes is an original advertising opportunity for businesses and a successful marketing tool that will
             surprise and delight your customers. Add your brand to customize the pod.</p>
         </div>
@@ -362,7 +362,7 @@
       class="w-full md:flex flex md:justify-start justify-center ease-in-out opacity-0 md:opacity-0 transition-opacity duration-150"
       id="document-heading">
       <button
-        class="flex justify-center font-['Baloo'] px-10 text-white text-lg font-medium bg-[#3A50B3] rounded-full mt-6 py-2" onclick="window.location.href='private-label.html';">
+        class="flex justify-center urbanist-regular px-10 text-white text-lg font-bold bg-[#3A50B3] rounded-full mt-6 py-2" onclick="window.location.href='private-label.html';">
         Add your brand
       </button>
     </div>
@@ -374,10 +374,10 @@
        shadow-md rounded-md relative overflow-hidden">
         <div class="rounded-full w-24 h-24 md:w-28 md:h-28 bg-white absolute top-16 right-2  md:top-40 md:right-14 z-[100]"></div>
         <div class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"></div>
-        <h2 class="text-white text-[14px] md:text-[28px] urbanist-regular font-bold">
+        <h2 class="text-white text-[14px] md:text-[28px] urbanist-regular font-semibold">
           Get in touch with us!
         </h2>
-        <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular">
+        <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium">
           to discuss your interest in Wicked Wipes
         </h2>
         <div class="w-full py-8 md:pt-16 flex gap-x-6">
@@ -390,7 +390,7 @@
         <div class="w-full md:pt-10 flex gap-x-6">
           <img src="/public/carbon_location-filled.svg" alt="" />
           <div class="flex flex-col w-full">
-            <p class="text-white text-xs md:text-[16px] md:text-nowrap leading-relaxed">
+            <p class="text-white text-xs md:text-[16px] md:text-nowrap leading-relaxed league-spartan">
               <a
                   href="https://www.google.com/maps/dir//2030%20Bristol%20Circle,%20Suite%20210,%20Oakville,%20ON%20-%20L6H%200H2"
                   >2030 Bristol Circle, Suite 210,<br />
@@ -415,12 +415,12 @@
             <div class="g-recaptcha" data-sitekey="6LeK3DAqAAAAABPUmnvuJCf7ZUQwRq27KDavibFx"></div>
         </form>
         <div class="w-full flex justify-end">
-            <button type="submit" form="contactForm" class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-16 py-4">
+            <button type="submit" form="contactForm" class="flex justify-center w-1/2 text-white text-base urbanist-regular font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-16 py-4">
                 Let's connect
             </button>
         </div>
         <a href="privacy-policy.html">
-          <p class="text-right text-sm p-4">Privacy Policy</p>
+          <p class="text-right text-md league-spartan p-4">Privacy Policy</p>
         </a>
         <div id="form-message" style="margin-top: 20px;"></div>
     </div>    
@@ -432,13 +432,13 @@
     id="cookie-banner"
     class="flex fixed z-[300] bottom-0 left-0 right-0 bg-gray-800 text-white p-5 justify-between items-center flex-col md:flex-row md:space-x-4"
   >
-    <p class="text-lg text-center md:text-left">
+    <p class="text-lg text-center md:text-left league-spartan">
       We use cookies to enhance your experience. By continuing to visit this
       site, you agree to our use of cookies.
     </p>
     <button
       id="accept-cookies"
-      class="bg-blue-500 text-white py-2 px-4 mt-3 md:mt-0 rounded-full"
+      class="bg-blue-500 text-white py-2 px-4 mt-3 md:mt-0 rounded-full league-spartan"
     >
       Accept Cookies
     </button>
