--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -67,7 +67,7 @@
         <nav class="hidden md:flex items-center justify-center rounded-full">
           <ul
             id="menu"
-            class="flex flex-col md:flex-row justify-center items-center text-center gap-y-4 md:gap-y-0 md:px-16 md:gap-x-8 text-[#3A50B3] text-lg md:text-xl font-normal urbanist-regular"
+            class="flex flex-col md:flex-row justify-center items-center text-center gap-y-4 md:gap-y-0 md:px-16 md:gap-x-8 text-[#3A50B3] text-lg md:text-xl font-semibold urbanist-regular"
           >
             <li><a href="features.html">Features</a></li>
             <li><a href="private-label.html">Private Label</a></li>
@@ -142,10 +142,10 @@
     <!-- Privacy Policy Content -->
     <section class="w-full flex md:p-32 p-4">
       <div class="w-full flex flex-col justify-center p-4 md:px-20">
-        <h1 class="text-left text-2xl md:text-4xl urbanist-regular">
+        <h1 class="text-left text-2xl md:text-4xl font-black urbanist-regular">
           Privacy Policy
         </h1>
-        <p class="text-lg md:text-xl py-6">
+        <p class="text-lg md:text-xl py-6 league-spartan">
           Thank you for visiting our web site. This privacy policy provides
           information on how we use personal information collected on our site.
           Please read this privacy policy before using the site or submitting
@@ -157,10 +157,10 @@
           site to make sure that you understand how any personal information you
           provide will be used.
         </p>
-        <h2 class="text-left text-2xl md:text-4xl urbanist-regular">
+        <h2 class="text-left text-2xl md:text-4xl urbanist-regular font-semibold">
           Collection of Information
         </h2>
-        <p class="text-lg md:text-xl py-6">
+        <p class="text-lg md:text-xl py-6 league-spartan">
           We collect personally identifiable information, like name, email
           address, company etc., when voluntarily submitted by our visitors. The
           information you provide us is used to fulfill your specific request.
@@ -169,10 +169,10 @@
           email from Wicked Wipes contains instructions on how to opt out of
           receiving further marketing emails from the Company.
         </p>
-        <h2 class="text-left text-2xl md:text-4xl urbanist-regular">
+        <h2 class="text-left text-2xl md:text-4xl urbanist-regular font-semibold">
           Cookie/Tracking Technology
         </h2>
-        <p class="text-lg md:text-xl py-6">
+        <p class="text-lg md:text-xl py-6 league-spartan">
           The site may use cookie and tracking technology depending on the
           features offered. Cookie and tracking technology gather information
           such as IP address, referrer, browser type, operating system etc. We
@@ -182,10 +182,10 @@
           technology, however, if you previously provided personally
           identifiable information, cookies may be tied to such information.
         </p>
-        <h2 class="text-left text-2xl md:text-4xl urbanist-regular">
+        <h2 class="text-left text-2xl md:text-4xl urbanist-regular font-semibold">
           Distribution of Information
         </h2>
-        <p class="text-lg md:text-xl py-6">
+        <p class="text-lg md:text-xl py-6 league-spartan">
           We may share information with governmental agencies or other companies
           assisting us in fraud prevention or investigation. We may do so when:
           (1) permitted or required by law; or, (2) trying to protect against or
@@ -193,18 +193,18 @@
           (3) investigating fraud which has already taken place. The information
           is not provided to these companies for marketing purposes.
         </p>
-        <h2 class="text-left text-2xl md:text-4xl urbanist-regular">
+        <h2 class="text-left text-2xl md:text-4xl urbanist-regular font-semibold">
           Commitment to Data Security
         </h2>
-        <p class="text-lg md:text-xl py-6">
+        <p class="text-lg md:text-xl py-6 league-spartan">
           Your personally identifiable information is kept secure. Only
           authorized employees, have access to this information. All emails and
           newsletters from this site allow you to opt out of further mailings.
         </p>
-        <h2 class="text-left text-2xl md:text-4xl urbanist-regular">
+        <h2 class="text-left text-2xl md:text-4xl urbanist-regular font-semibold">
           Privacy Contact Information
         </h2>
-        <p class="text-lg md:text-xl py-6">
+        <p class="text-lg md:text-xl py-6 league-spartan">
           If you have any questions, concerns, or comments about our privacy
           policy you may contact us using the form on our website. We reserve
           the right to make changes to this policy. Any changes to this policy
