--- a/who-we-are.html
+++ b/who-we-are.html
@@ -55,7 +55,7 @@
         /* Change to the color you want */
       }
     </style>
-    <title>Testimonials</title>
+    <title>Who We Are</title>
   </head>
 
   <body>
@@ -95,7 +95,7 @@
         >
           <ul
             id="menu"
-            class="flex justify-center items-center text-center px-10 gap-x-8 text-white text-xl urbanist-regular font-normal"
+            class="flex justify-center items-center text-center px-10 gap-x-8 text-white text-xl urbanist-regular font-semibold"
           >
             <li>
               <a href="features.html">Features</a>
@@ -118,7 +118,7 @@
           class="fixed top-0 right-0 h-full w-2/3 bg-blue-300 transform translate-x-full transition-transform duration-300 ease-in-out md:hidden"
         >
           <ul
-            class="flex flex-col p-4 space-y-6 text-black text-xl font-normal"
+            class="flex flex-col p-4 space-y-6 text-black text-xl urbanist-regular font-normal"
           >
             <li>
               <a href="features.html">Features</a>
@@ -164,7 +164,7 @@
         >
           About US
         </h1>
-        <p class="text-xl pt-10 urbanist-regular">
+        <p class="text-xl pt-10 league-spartan font-normal">
           WICKED WIPES is a brand new business run under the auspices of our
           founding company, Beatus Concepts Inc. Beatus (pronounced beahtus)
           means ”blessed” in Latin and as the founding members, we feel blessed
@@ -185,14 +185,14 @@
         class="p-4 md:px-24 md:py-16 md:flex justify-between w-full items-center"
       >
         <h1
-          class="text-[64px] md:text-[78px] urbanist-regular font-bold w-full text-[#97CAEB]"
+          class="text-[64px] md:text-[78px] urbanist-regular font-semibold w-full text-[#97CAEB]"
           data-aos="fade-right"
           data-aos-duration="700"
         >
           Our Mission
         </h1>
         <p
-          class="text-xl urbanist-regular"
+          class="text-xl league-spartan"
           data-aos="fade-left"
           data-aos-duration="700"
         >
@@ -216,7 +216,7 @@
               class="rounded-full h-full object-cover duration-300 ease-in-out translate-y-16 group-hover:translate-y-0"
             />
             <h2
-              class="text-xl font-bold text-center text-[#3A50B3] urbanist-regular pt-4"
+              class="text-xl font-bold text-center text-[#3A50B3] urbanist-regular font-semibold pt-4"
             >
               Shailesh Merai
             </h2>
@@ -230,7 +230,7 @@
               class="rounded-full h-full object-cover duration-300 ease-in-out translate-y-16 group-hover:translate-y-0"
             />
             <h2
-              class="text-xl font-bold text-center text-[#3A50B3] urbanist-regular pt-4"
+              class="text-xl font-bold text-center text-[#3A50B3] urbanist-regular font-semibold pt-4"
             >
               John Sasso
             </h2>
@@ -241,12 +241,12 @@
         class="py-20 px-3 md:px-24 md:py-20 flex flex-col justify-center w-full items-center"
       >
         <h2
-          class="text-[64px] md:text-[78px] urbanist-regular font-bold w-full text-[#97CAEB] text-center"
+          class="text-[64px] md:text-[78px] urbanist-regular font-semibold w-full text-[#97CAEB] text-center"
         >
           Who We are
         </h2>
         <p
-          class="text-xl md:px-0 px-4 urbanist-regular text-center ease-in-out opacity-0 transition-opacity duration-500"
+          class="text-xl md:px-0 px-4 league-spartan text-center ease-in-out opacity-0 transition-opacity duration-500"
           id="info"
         >
           We are Shailesh and John, business owners in our own right who have
@@ -270,11 +270,11 @@
             class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"
           ></div>
           <h1
-            class="text-white text-[14px] md:text-[28px] urbanist-regular font-bold"
+            class="text-white text-[14px] md:text-[28px] urbanist-regular font-semibold"
           >
             Get in touch with us!
           </h1>
-          <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular">
+          <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium">
             to discuss your interest in Wicked Wipes
           </h2>
           <div class="w-full py-8 md:pt-16 flex gap-x-6">
@@ -292,7 +292,7 @@
             <img src="/public/carbon_location-filled.svg" alt="" />
             <div class="flex flex-col w-full">
               <p
-                class="text-white text-xs md:text-[16px] md:text-nowrap leading-relaxed"
+                class="text-white text-xs md:text-[16px] md:text-nowrap leading-relaxed league-spartan"
               >
                 <a
                   href="https://www.google.com/maps/dir//2030%20Bristol%20Circle,%20Suite%20210,%20Oakville,%20ON%20-%20L6H%200H2"
@@ -379,13 +379,13 @@
             <button
               type="submit"
               form="contactForm"
-              class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
+              class="flex justify-center w-1/2 text-white text-base urbanist-regular font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
             >
               Let's connect
             </button>
           </div>
           <a href="privacy-policy.html">
-            <p class="text-right text-sm p-4">Privacy Policy</p>
+            <p class="text-right text-md p-4 league-spartan">Privacy Policy</p>
           </a>
           <div id="form-message" style="margin-top: 20px"></div>
         </div>
@@ -396,13 +396,13 @@
       id="cookie-banner"
       class="flex fixed z-[300] bottom-0 left-0 right-0 bg-gray-800 text-white p-5 justify-between items-center flex-col md:flex-row md:space-x-4"
     >
-      <p class="text-lg text-center md:text-left">
+      <p class="text-lg league-spartan text-center md:text-left">
         We use cookies to enhance your experience. By continuing to visit this
         site, you agree to our use of cookies.
       </p>
       <button
         id="accept-cookies"
-        class="bg-blue-500 text-white py-2 px-4 mt-3 md:mt-0 rounded-full"
+        class="bg-blue-500 text-white league-spartan py-2 px-4 mt-3 md:mt-0 rounded-full"
       >
         Accept Cookies
       </button>
