--- a/features.html
+++ b/features.html
@@ -109,12 +109,19 @@
           class="hidden md:flex flex-col absolute z-[100] top-56 left-32 leading-[50px]"
           id="video-section1"
         >
-          <h2 class="text-[48px] text-[#97CAEB] urbanist-regular font-medium">
+          <h1 class="text-[48px] text-[#97CAEB] urbanist-regular font-black">
             An elegant way to
-          </h2>
-          <h2 class="text-[68px] urbanist-regular font-medium text-white">
+          </h1>
+          <h2 class="text-[68px] urbanist-regular font-black text-white">
             cleanse your hands
           </h2>
+          <div class="block absolute z-[100] top-36 left 32">
+            <p class="league-spartan text-xl text-white">
+              Wicked Wipe is a unique, new hand-cleaning product, encased in an
+              attractive pod, that is designed for ease-of-use at the tabletop to
+              provide germ-reduction, cleanliness, and freshness.  
+            </p>
+          </div>
         </div>
         <!-- Decorative Circles -->
         <div
@@ -142,7 +149,7 @@
           >
             <ul
               id="menu"
-              class="flex flex-col md:flex-row justify-center items-center text-center gap-y-4 md:gap-y-0 px-6 md:px-16 gap-x-4 md:gap-x-8 text-white text-lg md:text-xl urbanist-regular font-normal"
+              class="flex flex-col md:flex-row justify-center items-center text-center gap-y-4 md:gap-y-0 px-6 md:px-16 gap-x-4 md:gap-x-8 text-white text-lg md:text-xl urbanist-regular font-semibold"
             >
               <li><a href="features.html">Features</a></li>
               <li><a href="private-label.html">Private Label</a></li>
@@ -201,12 +208,12 @@
         <!-- Text Section 2 -->
         <div class="block absolute bottom-12 md:bottom-28 left-4 md:left-32">
           <h2
-            class="text-white text-2xl md:text-3xl font-bold urbanist-regular"
+            class="text-white text-2xl md:text-3xl font-semibold urbanist-regular"
           >
             Three components make up the<br class="hidden md:block" />
             complete product:
           </h2>
-          <div class="flex flex-col pt-4 md:pt-6">
+          <div class="flex flex-col pt-4 md:pt-6 league-spartan">
             <p class="text-white text-md md:text-xl">
               1. Recyclable lightweight container pod
             </p>
@@ -249,17 +256,13 @@
             Design
           </h2>
           <div data-aos="fade-right" data-aos-duration="700">
-            <p
-              class="text-[20px] md:text-xl pt-6 md:pt-10 urbanist-regular"
-            >
+            <p class="text-[20px] md:text-xl pt-6 md:pt-10 league-spartan">
               The container pod is a two-chamber system. The cleansing solution
               is held in the outer chamber. The inner chamber contains a
               compressed cellulose cloth wipe. The two chambers are separated
               from each other until activated for use. 
             </p>
-            <p
-              class="text-[20px] md:text-xl pt-6 md:pt-10 urbanist-regular"
-            >
+            <p class="text-[20px] md:text-xl pt-6 md:pt-10 league-spartan">
               When pressure is applied to the middle of the top of the pod, by
               thumb or finger, the container opens the valve at the bottom and
               the cleansing solution from the outer chamber reaches the cloth
@@ -283,12 +286,12 @@
       <div class="flex flex-col md:flex-row w-full">
         <div class="flex flex-col w-full md:gap-y-6">
           <h1
-            class="text-white text-[40px] md:text-[78px] urbanist-regular font-bold"
+            class="text-white text-[40px] md:text-[78px] urbanist-regular font-semibold"
           >
             How to use
           </h1>
           <h1
-            class="text-[#97CAEB] text-[40px] md:text-[78px] urbanist-regular font-bold"
+            class="text-[#97CAEB] text-[40px] md:text-[78px] urbanist-regular font-semibold"
           >
             Wicked Wipes
           </h1>
@@ -296,7 +299,7 @@
         <div class="flex flex-col w-full mt-8 md:mt-0">
           <div class="w-full md:w-2/4 mb-2">
             <h2
-              class="text-white text-[28px] md:text-[46px] urbanist-regular font-medium"
+              class="text-white text-[28px] md:text-[46px] urbanist-regular font-semibold"
             >
               STEP 1
             </h2>
@@ -304,7 +307,7 @@
               class="p-2 bg-[#C1DFF3] rounded-full my-3 w-full hover:bg-[#97CAEB] transition-colors duration-300"
             ></div>
           </div>
-          <p class="text-xl text-white urbanist-regular font-bold">
+          <p class="text-xl text-white league-spartan">
             Place the Wicked Wipes pod on the table. The product is made up of
             two parts - the dry compressed cloth hand wipe and the gentle
             cleansing formulation. The hand wipe is kept dry to maintain
@@ -315,7 +318,7 @@
       <div class="w-full flex justify-around py-16">
         <div class="flex flex-col w-56">
           <h2
-            class="text-white text-[28px] md:text-[46px] urbanist-regular font-normal"
+            class="text-white text-[28px] md:text-[46px] urbanist-regular font-semibold"
           >
             STEP 2
           </h2>
@@ -326,7 +329,7 @@
         </div>
         <div class="flex flex-col w-56">
           <h2
-            class="text-white text-[28px] md:text-[46px] urbanist-regular font-normal"
+            class="text-white text-[28px] md:text-[46px] urbanist-regular font-semibold"
           >
             STEP 3
           </h2>
@@ -337,7 +340,7 @@
         </div>
         <div class="flex flex-col w-56">
           <h2
-            class="text-white text-[28px] md:text-[46px] urbanist-regular font-normal"
+            class="text-white text-[28px] md:text-[46px] urbanist-regular font-semibold"
           >
             STEP 4
           </h2>
@@ -395,7 +398,7 @@
         <!-- Step 4 -->
         <div class="flex items-center w-1/2 hidden" id="detail-4">
           <p
-            class="border-2 border-white text-white text-xl p-6 rounded-xl urbanist-regular font-bold"
+            class="border-2 border-white text-white text-xl p-6 rounded-xl league-spartan"
           >
             Simply wipe your hands with the soft, yet sturdy, cloth to remove
             dirt and germs. Experience the immediate cleansing action and feel
@@ -422,7 +425,7 @@
         </div>
         <div class="flex items-center w-1/2 hidden" id="detail-2">
           <p
-            class="border-2 border-white text-white text-xl p-6 rounded-xl urbanist-regular font-bold"
+            class="border-2 border-white text-white text-xl p-6 rounded-xl league-spartan"
           >
             Press down on the centre of the pod to activate the process. This
             breaks the seal and allows the cleansing solution to soak into the
@@ -431,7 +434,7 @@
         </div>
         <div class="flex items-center w-1/2 hidden" id="detail-3">
           <p
-            class="border-2 border-white text-white text-xl p-6 rounded-xl urbanist-regular font-bold"
+            class="border-2 border-white text-white text-xl p-6 rounded-xl league-spartan"
           >
             Pause for just a few seconds to allow the cloth to completely absorb
             the cleansing solution. Now it’s ready to use. 
@@ -444,12 +447,12 @@
       <div class="flex flex-col w-full">
         <div class="flex flex-col w-full md:gap-y-6">
           <h1
-            class="text-white text-[40px] md:text-[78px] urbanist-regular font-medium"
+            class="text-white text-[40px] md:text-[78px] urbanist-regular font-semibold"
           >
             How to Use
           </h1>
           <h1
-            class="text-[#97CAEB] text-[40px] md:text-[78px] urbanist-regular font-medium"
+            class="text-[#97CAEB] text-[40px] md:text-[78px] urbanist-regular font-semibold"
           >
             Wicked Wipes
           </h1>
@@ -461,7 +464,7 @@
               <div class="flex flex-col w-full mt-8">
                 <div class="w-full mb-2">
                   <h2
-                    class="text-white text-[28px] urbanist-regular font-medium"
+                    class="text-white text-[28px] urbanist-regular font-semibold"
                   >
                     STEP 1
                   </h2>
@@ -470,7 +473,7 @@
                   ></div>
                 </div>
                 <p
-                  class="text-[18px] urbanist-regular text-white font-black mt-6"
+                  class="text-[18px] league-spartan text-white mt-6"
                 >
                   Place the Wicked Wipes pod on the table. The product is made
                   up of two parts - the dry compressed cloth hand wipe and the
@@ -492,7 +495,7 @@
                 <div class="flex flex-col justify-center items-center w-full">
                   <div class="w-full my-2 flex flex-col justify-center">
                     <h2
-                      class="text-white text-[28px] md:text-[46px] urbanist-regular font-medium"
+                      class="text-white text-[28px] md:text-[46px] urbanist-regular font-semibold"
                     >
                       STEP 2
                     </h2>
@@ -501,7 +504,7 @@
                     ></div>
                   </div>
                   <p
-                    class="text-[18px] urbanist-regular text-white font-black mt-6"
+                    class="text-[18px] league-spartan text-white mt-6"
                   >
                     Press down on the centre of the pod to activate the process.
                     This breaks the seal and allows the cleansing solution to
@@ -540,7 +543,7 @@
               >
                 <div class="w-full my-2 flex flex-col justify-center">
                   <h2
-                    class="text-white text-[28px] md:text-[46px] urbanist-regular font-normal"
+                    class="text-white text-[28px] md:text-[46px] urbanist-regular font-semibold"
                   >
                     STEP 3
                   </h2>
@@ -549,7 +552,7 @@
                   ></div>
                 </div>
                 <p
-                  class="text-[18px] urbanist-regular text-white font-black mt-6"
+                  class="text-[18px] league-spartan text-white mt-6"
                 >
                   Pause for just a few seconds to allow the cloth to completely
                   absorb the cleansing solution. Now it’s ready to use. 
@@ -581,7 +584,7 @@
               >
                 <div class="w-full my-2 flex flex-col justify-center">
                   <h2
-                    class="text-white text-[28px] md:text-[46px] urbanist-regular font-normal"
+                    class="text-white text-[28px] md:text-[46px] urbanist-regular font-semibold"
                   >
                     STEP 4
                   </h2>
@@ -590,7 +593,7 @@
                   ></div>
                 </div>
                 <p
-                  class="text-[18px] urbanist-regular text-white font-black mt-6"
+                  class="text-[18px] league-spartan text-white mt-6"
                 >
                   Simply wipe your hands with the soft, yet sturdy, cloth to
                   remove dirt and germs. Experience the immediate cleansing
@@ -666,7 +669,7 @@
           </div>
           <div class="slide-in-right">
             <ul
-              class="md:list-disc space-y-4 urbanist-regular text-[11px] md:text-xl"
+              class="md:list-disc space-y-4 league-spartan text-[11px] md:text-xl"
             >
               <li class="">
                 Sealed individual pods ensure safety and security with no risk
@@ -696,7 +699,7 @@
           </div>
           <div class="md:flex md:w-full slide-in-left">
             <ul
-              class="md:list-disc space-y-4 urbanist-regular text-[11px] md:text-xl"
+              class="md:list-disc space-y-4 league-spartan text-[11px] md:text-xl"
             >
               <li class="">No alcohol, no chemicals, no color additives</li>
               <li class="">Complies with health and safety regulations</li>
@@ -740,7 +743,7 @@
           </div>
           <div class="slide-in-right">
             <ul
-              class="md:list-disc space-y-4 urbanist-regular text-[11px] md:text-xl"
+              class="md:list-disc space-y-4 league-spartan text-[11px] md:text-xl"
             >
               <li class="">Cloth hand wipes are botanic and biodegradable</li>
               <li class="">
@@ -768,7 +771,7 @@
         >
           <div class="w-full flex flex-col items-center md:items-start">
             <ul class="list-disc space-y-4">
-              <li class="text-lg md:text-xl">
+              <li class="text-lg md:text-xl urbanist-regular">
                 Cool, Lemon, Green Tea, Unscented
               </li>
             </ul>
@@ -819,11 +822,11 @@
             class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"
           ></div>
           <h1
-            class="text-white text-[14px] md:text-[28px] urbanist-regular font-bold"
+            class="text-white text-[14px] md:text-[28px] urbanist-regular font-semibold"
           >
             Get in touch with us!
           </h1>
-          <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular">
+          <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium">
             to discuss your interest in Wicked Wipes
           </h2>
           <div class="w-full py-8 md:pt-16 flex gap-x-6">
@@ -841,7 +844,7 @@
             <img src="/public/carbon_location-filled.svg" alt="" />
             <div class="flex flex-col w-full">
               <p
-                class="text-white text-xs md:text-[16px] md:text-nowrap leading-relaxed"
+                class="text-white text-xs md:text-[16px] md:text-nowrap leading-relaxed league-spartan"
               >
                 <a
                   href="https://www.google.com/maps/dir//2030%20Bristol%20Circle,%20Suite%20210,%20Oakville,%20ON%20-%20L6H%200H2"
@@ -928,13 +931,13 @@
             <button
               type="submit"
               form="contactForm"
-              class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
+              class="flex justify-center w-1/2 text-white text-base urbanist-regular font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
             >
               Let's connect
             </button>
           </div>
           <a href="privacy-policy.html">
-            <p class="text-right text-sm p-4">Privacy Policy</p>
+            <p class="text-right text-md p-4 league-spartan">Privacy Policy</p>
           </a>
           <div id="form-message" style="margin-top: 20px"></div>
         </div>
@@ -945,13 +948,13 @@
       id="cookie-banner"
       class="flex fixed z-[300] bottom-0 left-0 right-0 bg-gray-800 text-white p-5 justify-between items-center flex-col md:flex-row md:space-x-4"
     >
-      <p class="text-lg text-center md:text-left">
+      <p class="text-lg text-center md:text-left league-spartan">
         We use cookies to enhance your experience. By continuing to visit this
         site, you agree to our use of cookies.
       </p>
       <button
         id="accept-cookies"
-        class="bg-blue-500 text-white py-2 px-4 mt-3 md:mt-0 rounded-full"
+        class="bg-blue-500 text-white py-2 px-4 mt-3 md:mt-0 rounded-full league-spartan"
       >
         Accept Cookies
       </button>
@@ -1045,10 +1048,11 @@
       function removeLinks(textarea) {
         // Remove any links by replacing them with an empty string
         textarea.value = textarea.value.replace(/https?:\/\/[^\s]+/g, "");
-        const domainRegex = /(?:https?:\/\/|www\.)?[a-zA-Z0-9-]+\.[a-zA-Z]{2,}(\/[^\s]*)?/g;
-    
-    // Remove any links or domain names by replacing them with an empty string
-    textarea.value = textarea.value.replace(domainRegex, '');
+        const domainRegex =
+          /(?:https?:\/\/|www\.)?[a-zA-Z0-9-]+\.[a-zA-Z]{2,}(\/[^\s]*)?/g;
+
+        // Remove any links or domain names by replacing them with an empty string
+        textarea.value = textarea.value.replace(domainRegex, "");
       }
     </script>
     <script>
@@ -1157,13 +1161,15 @@
 
       // Observe the section
       observer.observe(featuresDetails);
-      document.getElementById('message').addEventListener('input', function() {
-    if (this.value.length < 10) {
-      this.setCustomValidity("Please provide a more detailed description of your inquiry.");
-    } else {
-      this.setCustomValidity("");
-    }
-  });
+      document.getElementById("message").addEventListener("input", function () {
+        if (this.value.length < 10) {
+          this.setCustomValidity(
+            "Please provide a more detailed description of your inquiry."
+          );
+        } else {
+          this.setCustomValidity("");
+        }
+      });
     </script>
     <script>
       const Step2 = document.getElementById("step-2");
