--- a/private-label.html
+++ b/private-label.html
@@ -80,7 +80,7 @@
         <nav class="hidden md:flex items-center justify-center rounded-full">
           <ul
             id="menu"
-            class="flex flex-col md:flex-row justify-center items-center text-center gap-y-4 md:gap-y-0 md:px-16 md:gap-x-8 text-[#3A50B3] text-lg md:text-xl font-normal urbanist-regular"
+            class="flex flex-col md:flex-row justify-center items-center text-center gap-y-4 md:gap-y-0 md:px-16 md:gap-x-8 text-[#3A50B3] text-lg md:text-xl font-semibold urbanist-regular"
           >
             <li><a href="features.html">Features</a></li>
             <li><a href="private-label.html">Private Label</a></li>
@@ -173,13 +173,13 @@
         class="w-full flex flex-col md:flex-row absolute justidy-center md:justify-between gap-y-6 md:gap-x-10 px-6 md:px-24 py-10 items-end bottom-0"
       >
         <h1
-          class="text-lg md:text-5xl urbanist-regular font-medium md:whitespace-nowrap"
+          class="text-lg md:text-5xl urbanist-regular font-black md:whitespace-nowrap"
         >
           Make an unforgettable impression <br class="hidden md:block" />
           with Wicked Wipes
         </h1>
         <p
-          class="text-lg md:text-2xl bg-white/80 rounded-[40px] px-6 py-8 md:px-10 md:py-16 font-medium"
+          class="text-lg md:text-2xl bg-white/80 rounded-[40px] px-6 py-8 md:px-10 md:py-16 league-spartan"
         >
           Wow your customers and build your brand value with our unique hand
           wipes
@@ -194,7 +194,7 @@
         data-aos="zoom-in"
         data-aos-duration="1000"
       >
-        <h1 class="text-[48px] text-[#3A50B3] urbanist-regular font-medium">
+        <h1 class="text-[48px] text-[#3A50B3] urbanist-regular font-semibold">
           One of a kind
         </h1>
       </div>
@@ -203,9 +203,9 @@
         data-aos="zoom-in"
         data-aos-duration="1000"
       >
-        <h2 class="text-md md:text-xl urbanist-regular text-center">
+        <p class="text-md md:text-xl league-spartan text-center">
           Wicked Wipes will give you an edge over your competition
-        </h2>
+        </p>
       </div>
       <div class="flex flex-col w-full justify-center px-16 py-16">
         <img
@@ -214,7 +214,9 @@
           data-aos="zoom-in"
           data-aos-duration="1000"
         />
-        <h2 class="text-xl text-[#3A50B3] text-center pt-10 font-medium">
+        <h2
+          class="text-xl urbanist-regular text-[#3A50B3] text-center pt-10 font-semibold"
+        >
           Being the only hand wipe of its kind elevates your business
           immediately
         </h2>
@@ -237,7 +239,7 @@
             class="flex flex-col md:flex-row w-full justify-evenly gap-y-10 md:gap-x-24 px-6 md:px-16"
           >
             <div
-              class="text-base md:text-xl bg-blue-300 rounded-full p-6 md:p-8 w-full slide-in-left"
+              class="text-base md:text-xl bg-blue-300 rounded-full p-6 md:p-8 w-full slide-in-left league-spartan"
             >
               When your guests press the center of the pod, they will experience
               the fun and surprise effect of watching the cloth rise up and
@@ -266,7 +268,7 @@
               />
             </div>
             <div
-              class="text-base md:text-xl bg-blue-300 rounded-full p-6 md:p-8 w-full slide-in-right"
+              class="text-base md:text-xl bg-blue-300 rounded-full p-6 md:p-8 w-full slide-in-right league-spartan"
             >
               They will be pleased to know that the wipes are natural and
               eco-friendly, and a means of reducing the spread of viruses and
@@ -277,7 +279,7 @@
             class="flex flex-col md:flex-row w-full justify-evenly gap-y-10 md:gap-x-24 px-6 md:px-16"
           >
             <div
-              class="text-base md:text-xl bg-blue-300 rounded-full p-6 md:p-8 w-full slide-in-left"
+              class="text-base md:text-xl bg-blue-300 rounded-full p-6 md:p-8 w-full slide-in-left league-spartan"
             >
               These plush and strong cloth hand wipes add charm and delight to
               the whole dining experience.
@@ -298,8 +300,8 @@
     <!-- Gallery Section -->
     <section class="px-4 md:px-28 py-10 md:py-20 w-full">
       <div class="w-full px-4 md:px-40 flex justify-center" id="gallery">
-        <h2
-          class="text-base md:text-xl text-[#3A50B3] urbanist-regular text-center"
+        <p
+          class="text-base md:text-xl text-[#3A50B3] league-spartan text-center"
           id="gallery-one"
         >
           Perfect for all areas of the hospitality industry, including
@@ -307,7 +309,7 @@
           stylish, surprising and unique and is a successful advertising tool.
           It can be customized to suit your brand with the focus on quality,
           function and originality.
-        </h2>
+        </p>
       </div>
       <div
         class="flex flex-wrap md:flex-nowrap w-full justify-center gap-y-10 md:gap-y-0 gap-x-4 md:gap-x-10 py-10 md:py-20"
@@ -339,9 +341,11 @@
       <div
         class="flex p-6 md:p-10 bg-[#F4F9FF] w-full rounded-full justify-center"
       >
-        <h1 class="text-base md:text-xl font-medium text-center">
+        <h3
+          class="text-base md:text-xl urbanist-regular font-medium text-center"
+        >
           Promote and market your business by adding your brand to the pod
-        </h1>
+        </h3>
       </div>
     </section>
 
@@ -358,11 +362,13 @@
             class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"
           ></div>
           <h1
-            class="text-white text-[14px] md:text-[28px] urbanist-regular font-bold"
+            class="text-white text-[14px] md:text-[28px] urbanist-regular font-semibold"
           >
             Get in touch with us!
           </h1>
-          <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular">
+          <h2
+            class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium"
+          >
             to discuss your interest in Wicked Wipes
           </h2>
           <div class="w-full py-8 md:pt-16 flex gap-x-6">
@@ -380,7 +386,7 @@
             <img src="/public/carbon_location-filled.svg" alt="" />
             <div class="flex flex-col w-full">
               <p
-                class="text-white text-xs md:text-[16px] md:text-nowrap leading-relaxed"
+                class="text-white text-xs md:text-[16px] md:text-nowrap leading-relaxed league-spartan"
               >
                 <a
                   href="https://www.google.com/maps/dir//2030%20Bristol%20Circle,%20Suite%20210,%20Oakville,%20ON%20-%20L6H%200H2"
@@ -467,13 +473,13 @@
             <button
               type="submit"
               form="contactForm"
-              class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
+              class="flex justify-center w-1/2 text-white text-base urbanist-regular font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
             >
               Let's connect
             </button>
           </div>
           <a href="privacy-policy.html">
-            <p class="text-right text-sm p-4">Privacy Policy</p>
+            <p class="text-right text-md p-4 league-spartan">Privacy Policy</p>
           </a>
           <div id="form-message" style="margin-top: 20px"></div>
         </div>
@@ -484,13 +490,13 @@
       id="cookie-banner"
       class="flex fixed z-[300] bottom-0 left-0 right-0 bg-gray-800 text-white p-5 justify-between items-center flex-col md:flex-row md:space-x-4"
     >
-      <p class="text-lg text-center md:text-left">
+      <p class="text-lg text-center md:text-left league-spartan">
         We use cookies to enhance your experience. By continuing to visit this
         site, you agree to our use of cookies.
       </p>
       <button
         id="accept-cookies"
-        class="bg-blue-500 text-white py-2 px-4 mt-3 md:mt-0 rounded-full"
+        class="bg-blue-500 text-white py-2 px-4 mt-3 md:mt-0 rounded-full league-spartan"
       >
         Accept Cookies
       </button>
