Added missing paragraph to Feature page on the Video banner

--- a/features.html
+++ b/features.html
@@ -931,7 +931,7 @@
             <button
               type="submit"
               form="contactForm"
-              class="flex justify-center w-1/2 text-white text-base urbanist-regular font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
+              class="flex justify-center w-1/2 text-white text-base urbanist-regular font-semibold bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
             >
               Let's connect
             </button>
