Updated UI Theme on Website

--- a/features.html
+++ b/features.html
@@ -109,9 +109,9 @@
           class="hidden md:flex flex-col absolute z-[100] top-56 left-32 leading-[50px]"
           id="video-section1"
         >
-          <h1 class="text-[48px] text-[#97CAEB] urbanist-regular font-black">
+          <h2 class="text-[48px] text-[#97CAEB] urbanist-regular font-black">
             An elegant way to
-          </h1>
+          </h2>
           <h2 class="text-[68px] urbanist-regular font-black text-white">
             cleanse your hands
           </h2>
@@ -208,7 +208,7 @@
         <!-- Text Section 2 -->
         <div class="block absolute bottom-12 md:bottom-28 left-4 md:left-32">
           <h2
-            class="text-white text-2xl md:text-3xl font-semibold urbanist-regular"
+            class="text-white text-2xl md:text-3xl concert-one-regular"
           >
             Three components make up the<br class="hidden md:block" />
             complete product:
@@ -244,17 +244,17 @@
         <div
           class="flex flex-col w-full md:gap-y-6 md:bg-[url('/public/white 1.png')] md:bg-cover"
         >
-          <h2
+          <h1
             class="text-4xl md:text-[78px] text-[#97CAEB] font-bold urbanist-regular"
           >
             Wicked Wipes
-          </h2>
-          <h2
+          </h1>
+          <h1
             class="text-4xl md:text-[78px] text-[#97CAEB] font-bold urbanist-regular hover:text-[#3A50B3]"
             id="design-heading"
           >
             Design
-          </h2>
+          </h1>
           <div data-aos="fade-right" data-aos-duration="700">
             <p class="text-[20px] md:text-xl pt-6 md:pt-10 league-spartan">
               The container pod is a two-chamber system. The cleansing solution
@@ -285,16 +285,16 @@
     <section class="hidden md:block px-4 md:px-36 py-16 md:py-32 bg-[#3A50B3]">
       <div class="flex flex-col md:flex-row w-full">
         <div class="flex flex-col w-full md:gap-y-6">
-          <h1
+          <h2
             class="text-white text-[40px] md:text-[78px] urbanist-regular font-semibold"
           >
             How to use
-          </h1>
-          <h1
+          </h2>
+          <h2
             class="text-[#97CAEB] text-[40px] md:text-[78px] urbanist-regular font-semibold"
           >
             Wicked Wipes
-          </h1>
+          </h2>
         </div>
         <div class="flex flex-col w-full mt-8 md:mt-0">
           <div class="w-full md:w-2/4 mb-2">
@@ -446,16 +446,16 @@
     <section class="md:hidden block px-10 py-16 md:py-32 bg-[#3A50B3]">
       <div class="flex flex-col w-full">
         <div class="flex flex-col w-full md:gap-y-6">
-          <h1
+          <h2
             class="text-white text-[40px] md:text-[78px] urbanist-regular font-semibold"
           >
             How to Use
-          </h1>
-          <h1
+          </h2>
+          <h2
             class="text-[#97CAEB] text-[40px] md:text-[78px] urbanist-regular font-semibold"
           >
             Wicked Wipes
-          </h1>
+          </h2>
         </div>
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
@@ -821,11 +821,11 @@
           <div
             class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"
           ></div>
-          <h1
+          <h2
             class="text-white text-[14px] md:text-[28px] urbanist-regular font-semibold"
           >
             Get in touch with us!
-          </h1>
+          </h2>
           <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium">
             to discuss your interest in Wicked Wipes
           </h2>
@@ -986,9 +986,9 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-2">
-          <h1 class="text-white urbanist-regular font-bold text-base">
+          <h2 class="text-white urbanist-regular font-bold text-base">
             Follow Us
-          </h1>
+          </h2>
           <div class="flex gap-3 items-center">
             <img src="./public/Fb.svg" class="size-7" alt="fb" id="fbImage" />
             <img
