--- a/who-we-are.html
+++ b/who-we-are.html
@@ -158,7 +158,7 @@
       </div>
       <div class="flex flex-col w-full mt-96 pt-20">
         <h1
-          class="text-5xl font-black urbanist-regular"
+          class="text-5xl concert-one-regular"
           data-aos="fade-right"
           data-aos-duration="700"
         >
@@ -184,13 +184,13 @@
       <div
         class="p-4 md:px-24 md:py-16 md:flex justify-between w-full items-center"
       >
-        <h1
+        <h2
           class="text-[64px] md:text-[78px] urbanist-regular font-semibold w-full text-[#97CAEB]"
           data-aos="fade-right"
           data-aos-duration="700"
         >
           Our Mission
-        </h1>
+        </h2>
         <p
           class="text-xl league-spartan"
           data-aos="fade-left"
@@ -269,11 +269,11 @@
           <div
             class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"
           ></div>
-          <h1
+          <h2
             class="text-white text-[14px] md:text-[28px] urbanist-regular font-semibold"
           >
             Get in touch with us!
-          </h1>
+          </h2>
           <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium">
             to discuss your interest in Wicked Wipes
           </h2>
@@ -434,9 +434,9 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-4 md:gap-2 py-4 md:py-0">
-          <h1 class="text-white urbanist-regular font-bold text-base">
+          <h2 class="text-white urbanist-regular font-bold text-base">
             Follow us
-          </h1>
+          </h2>
           <div class="flex gap-3 items-center">
             <img src="./public/Fb.svg" class="size-7" alt="fb" id="fbImage" />
             <img
