--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <img src="./public/yellow 3.svg" alt="" class="size-auto absolute top-48 right-56">
         </div>
         <div class="flex flex-col w-full text-white z-[200]"id="topic">
-          <h1 class="text-[30px] urbanist-regular font-black w-full" id="topic">Hygienic, Safe, Natural,
+          <h1 class="text-[30px] concert-one-regular w-full" id="topic">Hygienic, Safe, Natural,
             Environmentally
             Friendly Wipes</h1>
           <p class="text-xl font-normal py-5">A creative solution to clean and freshen hands</p>
@@ -142,10 +142,10 @@
             <!-- Video Section desktop View -->
       <div class="hidden md:flex w-full h-full px-40 absolute overflow-hidden">
         <div class="flex flex-col w-full text-white absolute bottom-0" id="topic1">
-          <h1 class="text-[48px] urbanist-regular font-black w-full" id="topic1">Hygienic, Safe, Natural,<br>
+          <h1 class="text-[78px] concert-one-regular font-normal w-full" id="topic1">Hygienic, Safe, Natural,<br>
             Environmentally
             Friendly Wipes</h1>
-          <p class="text-xl font-normal py-5">A creative solution for clean and fresh hands</p>
+          <p class="text-[28px] league-spartan font-normal py-5">A creative solution for clean and fresh hands</p>
         </div>
         <div class="w-full h-full flex justify-end object-contain" id="welcomeDiv-1">
           <img src="./public/pods1.png" class="" alt="">
@@ -168,7 +168,7 @@
   <section class="w-full flex flex-col overflow-hidden">
     <div class="w-full flex flex-col md:flex-row md:px-40 md:py-16 px-4 py-6 gap-x-6 opacity-0" id="document-title">
       <div class="w-full">
-        <h2 class="text-4xl text-nowrap urbanist-regular font-semibold gradient-text">
+        <h2 class="text-4xl text-nowrap mitr-regular font-normal gradient-text">
           Stylish single-use <br> hand wipes
         </h2>
       </div>
@@ -178,7 +178,7 @@
           hands...
         </p>
         <p class="league-spartan text-xl">
-          So easy and fun to use...
+          So easy and fun to use. Just press firmly in the centre of the pod with your thumb. Feel the seal break and watch as the cloth absorbs the pleasantly scented, natural soap contained within, and unfurls almost magically for use!
         </p>
       </div>
     </div>
@@ -186,30 +186,27 @@
     <div class="md:flex md:justify-evenly justify-around items-start mx-4 md:px-40 md:mx-0 md:gap-x-6 overflow-hidden md:overflow-hidden h-full">
       <div class="relative  h-full">
         <div id="document-sliding-cards25"
-          class="flex gap-4 justify-center items-start p-6 shadow-2xl rounded-3xl font-['Baloo'] md:w-[500px] my-8">
+          class="flex gap-4 justify-center items-start p-6 shadow-2xl rounded-3xl md:w-[500px] my-8">
           <img src="./public/water-drop.png" alt="">
           <div>
-            <h2 class="font-bold text-[28px] urbanist-regular font-semibold text-[#3A50B3]">Natural</h2>
-            <p class="league-spartan text-[16px]">Wicked Wipes use only about 5 ml. of cleansing fluid per pod. Washing hands
-              requires
-              on average
-              1.5 litres of water.</p>
+            <h2 class="font-bold text-[28px] league-spartan font-bold text-[#3A50B3]">Natural</h2>
+            <p class="league-spartan text-[16px]">Dermatologically tested, hypoallergenic liquid soap gently cleanses your hands. Wicked Wipes are alcohol-free, chemical-free and colour-additive-free.</p>
           </div>
         </div>
         <div id="document-sliding-cards50"
-          class="flex gap-4 justify-center items-start p-6 shadow-xl rounded-3xl font-['Baloo'] md:w-[500px] md:opacity-0 my-8">
+          class="flex gap-4 justify-center items-start p-6 shadow-xl rounded-3xl md:w-[500px] md:opacity-0 my-8">
           <img src="./public/leaf.png" alt="">
           <div>
-            <h2 class="font-bold text-[28px] urbanist-regular font-semibold text-[#3A50B3]">Biodegradable</h2>
+            <h2 class="font-bold text-[28px] league-spartan font-bold text-[#3A50B3]">Biodegradable</h2>
             <p class="league-spartan text-[16px]">Well-made, soft, yet hardy cellulose hand wipes are designed to biodegrade
               naturally.</p>
           </div>
         </div>
         <div id="document-sliding-cards75"
-          class="flex h-full gap-4 justify-center items-center p-6 shadow-xl rounded-3xl font-['Baloo'] md:w-[500px] md:opacity-0 my-8">
+          class="flex h-full gap-4 justify-center items-center p-6 shadow-xl rounded-3xl md:w-[500px] md:opacity-0 my-8">
           <img src="./public/recycle.png" alt="">
           <div>
-            <h2 class="font-bold text-[28px] urbanist-regular font-semibold text-[#3A50B3]">Recyclable</h2>
+            <h2 class="font-bold text-[28px] league-spartan font-bold text-[#3A50B3]">Recyclable</h2>
             <p class="league-spartan text-[16px]">The pod is made from high quality PP / 05 raw material which is 100% recyclable.
             </p>
           </div>
@@ -235,7 +232,7 @@
     <div class="flex w-full my-10 justify-center">
       <h2
         id="hygiene-heading"
-        class="px-10 py-10 text-[#acd5ef] urbanist-regular text-6xl text-center hover:text-[#3A50B3] font-semibold"
+        class="px-10 py-10 text-[#acd5ef] mitr-regular font-medium text-[100px] text-center hover:text-[#3A50B3] font-semibold"
       >
         Let’s make hygiene fun and desirable!
       </h2>
@@ -246,9 +243,9 @@
   <!-- Categories Section -->
 
   <section class=" flex flex-col md:pt-[100px] bg-[#c1eaf3] h-[903px] md:h-[903px] relative overflow-hidden" id="colorSection">
-    <h2 class="px-4 md:px-40 text-[#3a50b3] text-[28px] md:text-[46px] urbanist-regular font-semibold">
+    <h4 class="px-4 md:px-40 text-[#3a50b3] text-[28px] md:text-[46px] mitr-regular font-medium">
       Refreshing natural fragrances
-    </h2>
+    </h4>
     <div class="flex flex-col">
       <div class="flex flex-wrap md:flex-nowrap md:gap-x-2 md:px-40">
         <div>
@@ -274,7 +271,7 @@
     <div class="flex md:flex-row flex-col justify-between">
       <div class="flex w-full">
         <h1 id="text-container"
-          class="absolute top-[430px] left-10 md:top-80 md:left-36 text-[60px] md:text-[180px] text-[#3a50b3] urbanist-regular font-semibold fade-text duration-500">
+          class="absolute top-[430px] left-10 md:top-80 md:left-36 text-[60px] md:text-[180px] text-[#3a50b3] concert-one-regular font-normal fade-text duration-500">
           Cool
         </h1>
       </div>
@@ -293,9 +290,9 @@
     <div
       class="flex flex-col justify-center items-center w-full gap-y-10">
       <div class="flex w-full md:px-10 px-4 justify-center">
-        <h3 class="text-[28px] md:text-[78px] urbanist-regular gradient-text font-semibold">
+        <h2 class="text-[28px] md:text-[78px] concert-one-regular gradient-text font-normal">
           Wicked Wipes is a smart <br> choice for your business
-        </h3>
+        </h2>
       </div>
       <div class="flex w-full md:px-28 px-4 justify-center">
         <p class="md:text-2xl text-xl league-spartan text-center">
@@ -811,7 +808,7 @@ window.onload = checkCookiesAccepted;
     setTimeout(() => {
       // Change the text
       textContainer.innerHTML = texts[currentTextIndex].text;
-      textContainer.className = `absolute top-[430px] left-10 md:top-80 md:left-36 md:text-[180px] text-[60px] urbanist-regular font-normal fade-text duration-500 ${texts[currentTextIndex].color}`;
+      textContainer.className = `absolute top-[430px] left-10 md:top-80 md:left-36 md:text-[180px] text-[60px] concert-one-regular font-normal fade-text duration-500 ${texts[currentTextIndex].color}`;
       currentTextIndex = (currentTextIndex + 1) % texts.length;
 
       // Fade in the new text
