--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -142,7 +142,7 @@
     <!-- Privacy Policy Content -->
     <section class="w-full flex md:p-32 p-4">
       <div class="w-full flex flex-col justify-center p-4 md:px-20">
-        <h1 class="text-left text-2xl md:text-4xl font-black urbanist-regular">
+        <h1 class="text-left text-2xl md:text-4xl concert-one-regular">
           Privacy Policy
         </h1>
         <p class="text-lg md:text-xl py-6 league-spartan">
