--- a/private-label.html
+++ b/private-label.html
@@ -173,7 +173,7 @@
         class="w-full flex flex-col md:flex-row absolute justidy-center md:justify-between gap-y-6 md:gap-x-10 px-6 md:px-24 py-10 items-end bottom-0"
       >
         <h1
-          class="text-lg md:text-5xl urbanist-regular font-black md:whitespace-nowrap"
+          class="text-lg md:text-5xl concert-one-regular md:whitespace-nowrap"
         >
           Make an unforgettable impression <br class="hidden md:block" />
           with Wicked Wipes
@@ -194,9 +194,9 @@
         data-aos="zoom-in"
         data-aos-duration="1000"
       >
-        <h1 class="text-[48px] text-[#3A50B3] urbanist-regular font-semibold">
+        <h2 class="text-[48px] text-[#3A50B3] urbanist-regular font-semibold">
           One of a kind
-        </h1>
+        </h2>
       </div>
       <div
         class="py-6 p-4 md:p-4 w-full flex justify-center bg-blue-100 rounded-full"
@@ -361,11 +361,11 @@
           <div
             class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"
           ></div>
-          <h1
+          <h2
             class="text-white text-[14px] md:text-[28px] urbanist-regular font-semibold"
           >
             Get in touch with us!
-          </h1>
+          </h2>
           <h2
             class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium"
           >
@@ -528,9 +528,9 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-2">
-          <h1 class="text-white urbanist-regular font-bold text-base">
+          <h2 class="text-white urbanist-regular font-bold text-base">
             Follow Us
-          </h1>
+          </h2>
           <div class="flex gap-3 items-center">
             <img src="./public/Fb.svg" class="size-7" alt="fb" id="fbImage" />
             <img
