Updated SEO Tags

--- a/features.html
+++ b/features.html
@@ -3,6 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="googlebot" content="notranslate" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="geo.region" content="CA-ON" />
+    <meta name="geo.placename" content="Oakville" />
+    <meta name="geo.position" content="43.51347;-79.671385" />
+    <meta name="ICBM" content="43.51347, -79.671385" />
+    <meta
+      property="og:title"
+      content=" Unique design, features of Wicked Wipes"
+    />
+    <meta
+      property="og:description"
+      content=" Wicked Wipes intelligent design, features and how to use"
+    />
+
+    <meta
+      property="og:site_name"
+      content="Beatus Concepts Inc. - Wicked Wipes"
+    />
+    <meta
+      property="og:image"
+      content="/public/meta/wicked-wipes-features.jpg"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/framer-motion/dist/framer-motion.umd.js"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
@@ -11,7 +34,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
-
+    <link rel="canonical" href="https://www.wickedwipes.ca/features.html" />
     <link
       href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap"
       rel="stylesheet"
@@ -81,8 +104,11 @@
         transition: opacity 1s ease-in-out;
       }
     </style>
-
-    <title>Features | Wicked Wipes</title>
+    <meta
+      name="description"
+      content="Wicked Wipes intelligent design, features and how to use"
+    />
+    <title>Unique design, features of Wicked Wipes</title>
   </head>
   <body>
     <!-- Video Banner Section -->
@@ -118,8 +144,8 @@
           <div class="block absolute z-[100] top-36 left 32">
             <p class="league-spartan text-xl text-white">
               Wicked Wipe is a unique, new hand-cleaning product, encased in an
-              attractive pod, that is designed for ease-of-use at the tabletop to
-              provide germ-reduction, cleanliness, and freshness.  
+              attractive pod, that is designed for ease-of-use at the tabletop
+              to provide germ-reduction, cleanliness, and freshness.  
             </p>
           </div>
         </div>
@@ -207,9 +233,7 @@
         </div>
         <!-- Text Section 2 -->
         <div class="block absolute bottom-12 md:bottom-28 left-4 md:left-32">
-          <h2
-            class="text-white text-2xl md:text-3xl concert-one-regular"
-          >
+          <h2 class="text-white text-2xl md:text-3xl concert-one-regular">
             Three components make up the<br class="hidden md:block" />
             complete product:
           </h2>
@@ -472,9 +496,7 @@
                     class="p-2 bg-[#C1DFF3] rounded-full my-3 w-2/5 hover:bg-[#97CAEB] transition-colors duration-300"
                   ></div>
                 </div>
-                <p
-                  class="text-[18px] league-spartan text-white mt-6"
-                >
+                <p class="text-[18px] league-spartan text-white mt-6">
                   Place the Wicked Wipes pod on the table. The product is made
                   up of two parts - the dry compressed cloth hand wipe and the
                   gentle cleansing formulation. The hand wipe is kept dry to
@@ -503,9 +525,7 @@
                       class="p-2 bg-[#C1DFF3] rounded-full my-3 w-2/5 hover:bg-[#97CAEB] transition-colors duration-300"
                     ></div>
                   </div>
-                  <p
-                    class="text-[18px] league-spartan text-white mt-6"
-                  >
+                  <p class="text-[18px] league-spartan text-white mt-6">
                     Press down on the centre of the pod to activate the process.
                     This breaks the seal and allows the cleansing solution to
                     soak into the dry cloth. Watch as it unfurl
@@ -551,9 +571,7 @@
                     class="p-2 bg-[#C1DFF3] rounded-full my-3 w-2/5 hover:bg-[#97CAEB] transition-colors duration-300"
                   ></div>
                 </div>
-                <p
-                  class="text-[18px] league-spartan text-white mt-6"
-                >
+                <p class="text-[18px] league-spartan text-white mt-6">
                   Pause for just a few seconds to allow the cloth to completely
                   absorb the cleansing solution. Now it’s ready to use. 
                 </p>
@@ -592,9 +610,7 @@
                     class="p-2 bg-[#C1DFF3] rounded-full my-3 w-2/5 hover:bg-[#97CAEB] transition-colors duration-300"
                   ></div>
                 </div>
-                <p
-                  class="text-[18px] league-spartan text-white mt-6"
-                >
+                <p class="text-[18px] league-spartan text-white mt-6">
                   Simply wipe your hands with the soft, yet sturdy, cloth to
                   remove dirt and germs. Experience the immediate cleansing
                   action and feel confident in reducing the spread of viruses
@@ -826,7 +842,9 @@
           >
             Get in touch with us!
           </h2>
-          <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium">
+          <h2
+            class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium"
+          >
             to discuss your interest in Wicked Wipes
           </h2>
           <div class="w-full py-8 md:pt-16 flex gap-x-6">
