--- a/who-we-are.html
+++ b/who-we-are.html
@@ -3,6 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="googlebot" content="notranslate" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="geo.region" content="CA-ON" />
+    <meta name="geo.placename" content="Oakville" />
+    <meta name="geo.position" content="43.51347;-79.671385" />
+    <meta name="ICBM" content="43.51347, -79.671385" />
+    <link rel="canonical" href="https://www.wickedwipes.ca/who-we-are.html" />
+    <meta property="og:title" content=" Wicked Wipes: Who we are" />
+    <meta property="og:description" content="About Wicked Wipes Company" />
+
+    <meta
+      property="og:site_name"
+      content="Beatus Concepts Inc. - Wicked Wipes"
+    />
+    <meta
+      property="og:image"
+      content="/public/meta/wicked-wipes-whoweare.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://www.wickedwipes.ca/who-we-are.html "
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <link rel="stylesheet" href="./global.css" />
@@ -55,7 +77,8 @@
         /* Change to the color you want */
       }
     </style>
-    <title>Who We Are</title>
+    <title>Wicked Wipes: Who we are</title>
+    <meta name="description" content="About Wicked Wipes Company" />
   </head>
 
   <body>
@@ -274,7 +297,9 @@
           >
             Get in touch with us!
           </h2>
-          <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium">
+          <h2
+            class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium"
+          >
             to discuss your interest in Wicked Wipes
           </h2>
           <div class="w-full py-8 md:pt-16 flex gap-x-6">
