--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="initial-scale=1, width=device-width" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="googlebot" content="notranslate">
+  <meta name="geo.region" content="CA-ON" />
+  <meta name="geo.placename" content="Oakville" />
+  <meta name="geo.position" content="43.51347;-79.671385" />
+  <meta name="ICBM" content="43.51347, -79.671385" />
+  <meta property="og:title" content="Unique high-quality cloth hand towels to cleanse hands ">
+  <meta property="og:description" content="Unique biodegradable towel compressed in recyclable pod with natural cleansing solution to clean hands">
+  <meta property="og:site_name" content="Beatus Concepts Inc. - Wicked Wipes">
+  <meta property="og:image" content="/public/meta/wicked-wipes-home.jpg">
+  <meta property="og:url" content="https://www.wickedwipes.ca">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <link rel="stylesheet" href="./global.css" />
@@ -55,10 +66,12 @@
     background-color:#FFF;
   }
   </style>
+  <meta name="description" content="Unique biodegradable towel compressed in recyclable pod with natural cleansing solution to clean hands">
+  <link rel="canonical" href="https://www.wickedwipes.ca" />
   <meta property="og:title" content="Wicked Wipes" />
   <meta property="og:url" content="https://www.wickedwipes.ca" />  
   <meta property="og:image" content="https://www.wickedwipes.ca/images/sample.jpg" />
-  <title>Wicked Wipes</title>
+  <title>Unique high-quality cloth hand towels to cleanse hands</title>
 </head>
 
 <body>
