--- a/private-label.html
+++ b/private-label.html
@@ -3,6 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="googlebot" content="notranslate" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="geo.region" content="CA-ON" />
+    <meta name="geo.placename" content="Oakville" />
+    <meta name="geo.position" content="43.51347;-79.671385" />
+    <meta name="ICBM" content="43.51347, -79.671385" />
+    <meta
+      property="og:title"
+      content="Brand Wicked Wipes with your business logo"
+    />
+    <meta
+      property="og:description"
+      content="Wicked Wipes branding opportunities"
+    />
+
+    <meta
+      property="og:site_name"
+      content="Beatus Concepts Inc. - Wicked Wipes"
+    />
+    <meta property="og:image"
+    content="/public/meta/wiicked-wipes-privatelabel.jpg">
+    <meta
+      property="og:url"
+      content="https://www.wickedwipes.ca/private-label.html"
+    />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <link rel="stylesheet" href="./global.css" />
@@ -42,6 +68,10 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="canonical"
+      href="https://www.wickedwipes.ca/private-label.html"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
       window.$zoho = window.$zoho || {};
@@ -66,7 +96,8 @@
         color: #3a50b3; /* Change to the color you want */
       }
     </style>
-    <title>Private Label</title>
+    <title>Brand Wicked Wipes with your business logo</title>
+    <meta name="description" content="Wicked Wipes branding opportunities" />
   </head>
   <body>
     <section class="flex flex-col items-center py-10 w-full">
